Resolve an unnecessary gap at the bottom. (#7544)
* Resolve an unnecessary gap at the bottom.

This can be caused by theme editor styles -- in this case, it was caused
by twentyseventeen here:

https://github.com/WordPress/WordPress/blob/be94fa5483dd98667d1fd911d6390ad34387804d/wp-content/themes/twentyseventeen/assets/css/editor-style.css#L343

and looks like this, before the change:

https://gyazo.com/67d9879a532e7363de480b782a8ce320

* Avoid flash of unstyled content.

--- a/modules/contact-form/css/editor-style.css
+++ b/modules/contact-form/css/editor-style.css
@@ -535,6 +535,8 @@ input[type="submit"]:focus {
 	min-height: 500px;
 	border: 0;
 	overflow: hidden;
+	margin-bottom: 0;
+	display: block;
 }
 
 .contact-submit.contact-submit {
